# Projekt-3

./: .gitignore  README.md  cmake_example.exp  cmake_example.lib  main2.cpp  rozklad_pracy.txt
CMakeProjekt3/: CMakeLists.txt  CMakeProjekt3.cpp  CMakeProjekt3.h  rozklad_pracy.txt
cmake_example_1/: CMakeLists.txt  module1.py
cmake_example_1/src/: main.cpp
raport/: Projekt3.ipynb
